Second Fragment replaces the first and the alarm manager now sets a notification reminder.
Now update the second fragment and test the notification system.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
             </intent-filter>
         </activity>
 
+        <service
+            android:name=".myNotification"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
     </application>
 
 </manifest>
