--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         </activity>
 
         <service
-            android:name=".myNotification"
+            android:name=".sNotificationService"
             android:enabled="true"
             android:exported="true" >
         </service>
