--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,17 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.avaygo.myfastingtracker"
     android:versionCode="0"
-    android:versionName="0.0.8">
+    android:versionName="0.0.8" >
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
-
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/Theme.default" >
         <activity
-            android:name=".FastingTrackerActivity"
+            android:name=".Activities.FastingTrackerActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,11 +21,26 @@
             </intent-filter>
         </activity>
 
+
         <service
-            android:name=".sNotificationService"
+            android:name=".Notifications.TimerNotificationService"
             android:enabled="true"
             android:exported="true" >
         </service>
+
+        <activity
+            android:name=".Activities.FastingLogActivity"
+            android:label="@string/title_activity_fasting_log" >
+        </activity>
+
+        <receiver
+            android:name=".Notifications.BootReceiver"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter >
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
