--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,13 +4,13 @@
     android:versionCode="0"
     android:versionName="0.0.8" >
 
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.default" >
+        android:theme="@style/Theme.light" >
         <activity
             android:name=".Activities.FastingTrackerActivity"
             android:label="@string/app_name" >
@@ -21,24 +21,18 @@
             </intent-filter>
         </activity>
 
-
         <service
             android:name=".Notifications.TimerNotificationService"
             android:enabled="true"
             android:exported="true" >
         </service>
 
-        <activity
-            android:name=".Activities.FastingLogActivity"
-            android:label="@string/title_activity_fasting_log" >
-        </activity>
-
         <receiver
             android:name=".Notifications.BootReceiver"
             android:enabled="true"
             android:exported="true" >
-            <intent-filter >
-                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
     </application>
