--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="0.0.8" >
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -40,6 +40,11 @@
         <activity
             android:name=".Activities.ReminderSettingActivity"
             android:label="@string/title_activity_reminder_setting" >
+        </activity>
+        <activity
+            android:name=".Activities.DurationPickerDialogue"
+            android:theme="@android:style/Theme.Holo.Dialog"
+            android:label="@string/title_activity_duration_picker_dialogue" >
         </activity>
     </application>
 
