--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,14 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:19.0.+'
+
+
     compile ("com.doomonafireball.betterpickers:library:1.5.2") {
         exclude group: 'com.android.support', module: 'support-v4'
     }
