--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.avaygo.myfastingtracker"
     android:versionCode="0"
-    android:versionName="0.0.8">
-
+    android:versionName="0.0.8" >
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -12,10 +11,10 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.light">
+        android:theme="@style/Theme.light" >
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,15 +25,15 @@
         <service
             android:name=".notifications.TimerNotificationService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <receiver
             android:name=".notifications.RecurringNotificationReciever"
-            android:enabled="true"></receiver>
+            android:enabled="true" />
         <receiver
             android:name=".notifications.BootReceiver"
             android:enabled="true"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -42,14 +41,18 @@
 
         <activity
             android:name=".activities.ReminderSettingActivity"
-            android:label="@string/title_activity_reminder_setting"></activity>
+            android:label="@string/title_activity_reminder_setting" />
         <activity
             android:name=".activities.DurationPickerDialogue"
             android:label="@string/title_activity_duration_picker_dialogue"
-            android:theme="@android:style/Theme.Holo.Dialog"></activity>
+            android:theme="@android:style/Theme.Holo.Dialog" />
         <activity
             android:name=".activities.SaveFastDialogue"
-            android:label="@string/title_activity_dialgoue_save_fast"></activity>
+            android:label="@string/title_activity_dialgoue_save_fast" />
+        <activity
+            android:name=".activities.FastDetailsActivity"
+            android:label="@string/title_activity_fast_details" >
+        </activity>
     </application>
 
 </manifest>
