--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,13 @@ repositories {
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:21.0.+'
-    compile 'com.android.support:appcompat-v7:21.0.+'
+    compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:cardview-v7:21.0.+'
     compile 'com.android.support:recyclerview-v7:21.0.+'
 
     compile 'com.roomorama:caldroid:1.1.8'
+
 
 
     compile ("com.doomonafireball.betterpickers:library:1.5.3") {
