--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,6 @@
 apply plugin: 'com.android.application'
-
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
-
+    compileSdkVersion 22
     defaultConfig {
         applicationId "com.avaygo.myfastingtracker"
         minSdkVersion 16
@@ -20,23 +17,28 @@ android {
         debug {
         }
     }
-}
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        compile 'com.android.support:support-v4:22.0.+'
+        compile 'com.android.support:appcompat-v7:22.0.+'
+        compile 'com.android.support:cardview-v7:22.0.+'
+        compile 'com.android.support:recyclerview-v7:22.0.+'
 
-repositories {
-    mavenCentral()
+        compile 'com.roomorama:caldroid:1.1.8'
+
+        compile("com.doomonafireball.betterpickers:library:1.5.3") {
+            exclude group: 'com.android.support', module: 'support-v4'
+
+        }
+
+
+    }
+    dependencies {
+    }
+    buildToolsVersion '22.0.1'
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:support-v4:22.2.0'
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:21.0.+'
-    compile 'com.android.support:recyclerview-v7:21.0.+'
-
-    compile 'com.roomorama:caldroid:1.1.8'
-
-    compile("com.doomonafireball.betterpickers:library:1.5.3") {
-        exclude group: 'com.android.support', module: 'support-v4'
-    }
 }
-
-
