--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.avaygo.myfastingtracker"
     android:versionCode="0"
-    android:versionName="0.0.8" >
+    android:versionName="0.0.8">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE" />
@@ -11,13 +11,12 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.light" >
+        android:theme="@style/Theme.light">
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -26,14 +25,13 @@
             android:name=".notifications.TimerNotificationService"
             android:enabled="true"
             android:exported="true" />
-
         <receiver
             android:name=".notifications.RecurringNotificationReceiver"
             android:enabled="true" />
         <receiver
             android:name=".notifications.BootReceiver"
             android:enabled="true"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -49,14 +47,11 @@
         <activity
             android:name=".activities.FastDetailsActivity"
             android:label="@string/title_activity_fast_details"
-            android:parentActivityName=".activities.MainActivity" >
-        </activity>
+            android:parentActivityName=".activities.MainActivity"></activity>
 
         <receiver
             android:name=".notifications.PostponeFastReciever"
             android:enabled="true"
-            android:exported="true" >
-        </receiver>
+            android:exported="true"></receiver>
     </application>
-
 </manifest>
