--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 22
+    compileSdkVersion 23
     defaultConfig {
         applicationId "com.avaygo.myfastingtracker"
         minSdkVersion 16
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "0.3.0"
     }
@@ -22,22 +22,22 @@ android {
     }
     dependencies {
         compile fileTree(dir: 'libs', include: ['*.jar'])
-        compile 'com.android.support:support-v4:22.0.+'
-        compile 'com.android.support:appcompat-v7:22.0.+'
-        compile 'com.android.support:cardview-v7:22.0.+'
-        compile 'com.android.support:recyclerview-v7:22.0.+'
+
+        compile 'com.android.support:support-v4:23.2.0'
+        compile 'com.android.support:appcompat-v7:23.2.0'
+        compile 'com.android.support:cardview-v7:23.2.0'
+        compile 'com.android.support:recyclerview-v7:23.2.0'
+        compile 'com.android.support:design:23.2.0'
 
         compile 'com.roomorama:caldroid:1.1.8'
 
         compile("com.doomonafireball.betterpickers:library:1.5.3") {
             exclude group: 'com.android.support', module: 'support-v4'
-
         }
 
 
     }
-    dependencies {
-    }
+
     buildToolsVersion '22.0.1'
 }
 dependencies {
